app/pages/Test/test.scss
.test-container {
    width: 100%;
    height: 100vh;
    background: #040404;
    color: #f2f2f2;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 1rem;
    gap: 0.5rem;
    font-family: 'monospace';
    font-size: 18px;

    .contract-builder {
        width: 100%;
        height: 80%;
        flex-shrink: 0;
        gap: 0.5rem;
        display: flex;

        .view {
            width: 70%;
            height: 100%;
            border-radius: 5px;
            border: 2px solid #0260e8;
            display: flex;

            .stages {
                width: 100%;
                height: 20%;
                border-bottom: 1px solid #0260e8;
                display: flex;
                gap: 0.5rem;
                padding: 0.5rem;
                overflow-x: auto;

                > div {
                    border-radius: 5px;
                    height: 100%;
                    background: #111;
                    aspect-ratio: 1;
                    display: flex;
                    align-items: center;
                    justify-content: center;
                    opacity: 0.5;
                    cursor: pointer;

                    &.active {
                        cursor: default;
                        opacity: 1;
                    }
                }
            }
        }

        .builder {
            width: 30%;
            height: 100%;
            border-radius: 5px;
            border: 2px solid #0260e8;
        }
    }

    span {
        overflow: hidden;
        text-overflow: ellipsis;
    }

    textarea {
        width: 100%;
        max-width: 100%;
        resize: none;
        height: 100%;
        font-size: 18px;
        border-radius: 5px;
        border: 2px solid #0260e8;
        padding: 0.5rem;
        background: transparent;
        color: inherit;
    }

    ::-webkit-scrollbar {
        width: 8px;
        height: 6px;
        background: #040404;
    }

    ::-webkit-scrollbar-thumb {
        background-color: #0351c1;
        border: 0;
        border-radius: 0;
    }

    ::selection {
        color: #fff;
        background-color: #0260e8;
    }
}

